--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: FishResp
-Version: 1.0.3
+Version: 1.1.0
 Title: Analytical Tool for Aquatic Respirometry
 Description: Calculates metabolic rate of fish and other aquatic organisms measured using
              an intermittent-flow respirometry approach. The tool is used to run a set of graphical
              QC tests of raw respirometry data, correct it for background respiration and chamber
              effect, filter and extract target values of absolute and mass-specific metabolic rate.
              Experimental design should include background respiration tests and measuring of one
-             or more metabolic rate traits. The package allows a user to import raw respirometry
-             data obtained from 'AquaResp' (free software), 'AutoResp' ('LoligoSystems'), 'OxyView'
-             ('PreSens'), 'Pyro Oxygen Logger' ('PyroScience') and 'Q-box Aqua' ('QubitSystems').
+             or more metabolic rate traits. The R package is ideally integrated with the pump
+             controller 'PumpResp' and the DO meter 'SensResp' (open-source hardware by FishResp).
+             Raw respirometry data can be also imported from 'AquaResp' (free software), 'AutoResp'
+             ('LoligoSystems'), 'OxyView' ('PreSens'), 'Pyro Oxygen Logger' ('PyroScience') and
+             'Q-box Aqua' ('QubitSystems').
 URL: https://fishresp.org
 Authors@R: c(
     person("Sergey", "Morozov", role = c("aut", "cre"), email = "sergey.morozov@helsinki.fi") ,
@@ -26,7 +28,7 @@ SystemRequirements: Display resolution >= 1280x800; RAM >= 4GB
 Depends: R (>= 3.0.0)
 Imports: chron, lattice, mclust, rMR, respirometry
 LazyData: FALSE
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
 Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2019-03-05 05:11:32 UTC; greatsage
+Packaged: 2021-04-23 03:12:01 UTC; greatsage
