--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,14 +14,16 @@ Description: Calculates metabolic rate of fish and other aquatic organisms measu
 URL: https://fishresp.org
 Authors@R: c(
     person("Sergey", "Morozov", role = c("aut", "cre"), email = "sergey.morozov@helsinki.fi") ,
-    person("R.J. Scott", "McCairns", role = c("aut", "ths"), email = "scott.mccairns@inra.fr"),
+    person("Scott", "McCairns", role = c("aut", "ths"), email = "scott.mccairns@inra.fr"),
 	  person("Federico", "Calboli", role = "ctb"),
     person("Juha", "Merila", role = "ths"),
+    person("Jenni", "Prokkola", role = "dtc"),
     person("Stephen", "White", role = "dtc"),
     person("Daniel", "Montgomery", role = "dtc"),
     person("Laura", "Almodovar-Acevedo", role = "dtc"),
     person("Niclas", "Kolm", role = "dtc"),
-    person("Alexander", "Kotrschal", role = "dtc"))
+    person("Alexander", "Kotrschal", role = "dtc"),
+    person("Erik", "Gill", role = "dtc"))
 Maintainer: Sergey Morozov <sergey.morozov@helsinki.fi>
 License: GPL-3 + file LICENSE
 SystemRequirements: Display resolution >= 1280x800; RAM >= 4GB
@@ -31,4 +33,4 @@ LazyData: FALSE
 RoxygenNote: 7.1.1
 Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2021-04-23 03:12:01 UTC; greatsage
+Packaged: 2021-05-06 03:12:01 UTC; greatsage
